--- a/main.ipynb
+++ b/main.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,21 @@
   },
   {
    "source": [
+    "## Business understanding\n",
+    "\n",
+    "We want to answer the following questions:\n",
+    "\n",
+    "What are the differences between people who come from a STEM/ComSci background and those who did not?\n",
+    "Which factors influence hourly wage? How to maximize it?\n",
+    "How does experience change the way coders handle problems?\n",
+    "\n",
+    "These questions have, from our point of view, a big influence on a successful career. So, we would like to find out how to have the perfect IT career. Is it really necessary to study STEM subjects for it? Often hearing this from other people, maybe it is wrong? And then of course how to make the most money out of your time, the most important part of making good money. And finally, we try to learn from the more experienced people."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "## Gathering data"
    ],
    "cell_type": "markdown",
@@ -59,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +83,14 @@
   },
   {
    "source": [
-    "## Assessing data"
+    "## Data understanding"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +115,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Column</th>\n      <th>QuestionText</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Respondent</td>\n      <td>Randomized respondent ID number (not in order ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>MainBranch</td>\n      <td>Which of the following options best describes ...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Hobbyist</td>\n      <td>Do you code as a hobby?</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Age</td>\n      <td>What is your age (in years)? If you prefer not...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Age1stCode</td>\n      <td>At what age did you write your first line of c...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>56</th>\n      <td>WebframeWorkedWith</td>\n      <td>Which web frameworks have you done extensive d...</td>\n    </tr>\n    <tr>\n      <th>57</th>\n      <td>WelcomeChange</td>\n      <td>Compared to last year, how welcome do you feel...</td>\n    </tr>\n    <tr>\n      <th>58</th>\n      <td>WorkWeekHrs</td>\n      <td>On average, how many hours per week do you wor...</td>\n    </tr>\n    <tr>\n      <th>59</th>\n      <td>YearsCode</td>\n      <td>Including any education, how many years have y...</td>\n    </tr>\n    <tr>\n      <th>60</th>\n      <td>YearsCodePro</td>\n      <td>NOT including education, how many years have y...</td>\n    </tr>\n  </tbody>\n</table>\n<p>61 rows × 2 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 96
+     "execution_count": 179
     }
    ],
    "source": [
@@ -110,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +152,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 97
+     "execution_count": 180
     }
    ],
    "source": [
@@ -145,8 +160,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 64461 entries, 0 to 64460\nData columns (total 61 columns):\n #   Column                        Non-Null Count  Dtype  \n---  ------                        --------------  -----  \n 0   Respondent                    64461 non-null  int64  \n 1   MainBranch                    64162 non-null  object \n 2   Hobbyist                      64416 non-null  object \n 3   Age                           45446 non-null  float64\n 4   Age1stCode                    57900 non-null  object \n 5   CompFreq                      40069 non-null  object \n 6   CompTotal                     34826 non-null  float64\n 7   ConvertedComp                 34756 non-null  float64\n 8   Country                       64072 non-null  object \n 9   CurrencyDesc                  45472 non-null  object \n 10  CurrencySymbol                45472 non-null  object \n 11  DatabaseDesireNextYear        44070 non-null  object \n 12  DatabaseWorkedWith            49537 non-null  object \n 13  DevType                       49370 non-null  object \n 14  EdLevel                       57431 non-null  object \n 15  Employment                    63854 non-null  object \n 16  Ethnicity                     45948 non-null  object \n 17  Gender                        50557 non-null  object \n 18  JobFactors                    49349 non-null  object \n 19  JobSat                        45194 non-null  object \n 20  JobSeek                       51727 non-null  object \n 21  LanguageDesireNextYear        54113 non-null  object \n 22  LanguageWorkedWith            57378 non-null  object \n 23  MiscTechDesireNextYear        42379 non-null  object \n 24  MiscTechWorkedWith            40314 non-null  object \n 25  NEWCollabToolsDesireNextYear  47287 non-null  object \n 26  NEWCollabToolsWorkedWith      52883 non-null  object \n 27  NEWDevOps                     42686 non-null  object \n 28  NEWDevOpsImpt                 41732 non-null  object \n 29  NEWEdImpt                     48465 non-null  object \n 30  NEWJobHunt                    42286 non-null  object \n 31  NEWJobHuntResearch            41022 non-null  object \n 32  NEWLearn                      56156 non-null  object \n 33  NEWOffTopic                   50804 non-null  object \n 34  NEWOnboardGood                42623 non-null  object \n 35  NEWOtherComms                 57205 non-null  object \n 36  NEWOvertime                   43231 non-null  object \n 37  NEWPurchaseResearch           37321 non-null  object \n 38  NEWPurpleLink                 54803 non-null  object \n 39  NEWSOSites                    58275 non-null  object \n 40  NEWStuck                      54983 non-null  object \n 41  OpSys                         56228 non-null  object \n 42  OrgSize                       44334 non-null  object \n 43  PlatformDesireNextYear        50605 non-null  object \n 44  PlatformWorkedWith            53843 non-null  object \n 45  PurchaseWhat                  39364 non-null  object \n 46  Sexuality                     43992 non-null  object \n 47  SOAccount                     56805 non-null  object \n 48  SOComm                        56476 non-null  object \n 49  SOPartFreq                    46792 non-null  object \n 50  SOVisitFreq                   56970 non-null  object \n 51  SurveyEase                    51802 non-null  object \n 52  SurveyLength                  51701 non-null  object \n 53  Trans                         49345 non-null  object \n 54  UndergradMajor                50995 non-null  object \n 55  WebframeDesireNextYear        40024 non-null  object \n 56  WebframeWorkedWith            42279 non-null  object \n 57  WelcomeChange                 52683 non-null  object \n 58  WorkWeekHrs                   41151 non-null  float64\n 59  YearsCode                     57684 non-null  object \n 60  YearsCodePro                  46349 non-null  object \ndtypes: float64(4), int64(1), object(56)\nmemory usage: 30.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         Respondent           Age      CompTotal  ConvertedComp   WorkWeekHrs\n",
+       "count  64461.000000  45446.000000   3.482600e+04   3.475600e+04  41151.000000\n",
+       "mean   32554.079738     30.834111  3.190464e+242   1.037561e+05     40.782174\n",
+       "std    18967.442360      9.585392            inf   2.268853e+05     17.816383\n",
+       "min        1.000000      1.000000   0.000000e+00   0.000000e+00      1.000000\n",
+       "25%    16116.000000     24.000000   2.000000e+04   2.464800e+04     40.000000\n",
+       "50%    32231.000000     29.000000   6.300000e+04   5.404900e+04     40.000000\n",
+       "75%    49142.000000     35.000000   1.250000e+05   9.500000e+04     44.000000\n",
+       "max    65639.000000    279.000000  1.111111e+247   2.000000e+06    475.000000"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Respondent</th>\n      <th>Age</th>\n      <th>CompTotal</th>\n      <th>ConvertedComp</th>\n      <th>WorkWeekHrs</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>64461.000000</td>\n      <td>45446.000000</td>\n      <td>3.482600e+04</td>\n      <td>3.475600e+04</td>\n      <td>41151.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>32554.079738</td>\n      <td>30.834111</td>\n      <td>3.190464e+242</td>\n      <td>1.037561e+05</td>\n      <td>40.782174</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>18967.442360</td>\n      <td>9.585392</td>\n      <td>inf</td>\n      <td>2.268853e+05</td>\n      <td>17.816383</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>0.000000e+00</td>\n      <td>0.000000e+00</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>16116.000000</td>\n      <td>24.000000</td>\n      <td>2.000000e+04</td>\n      <td>2.464800e+04</td>\n      <td>40.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>32231.000000</td>\n      <td>29.000000</td>\n      <td>6.300000e+04</td>\n      <td>5.404900e+04</td>\n      <td>40.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>49142.000000</td>\n      <td>35.000000</td>\n      <td>1.250000e+05</td>\n      <td>9.500000e+04</td>\n      <td>44.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>65639.000000</td>\n      <td>279.000000</td>\n      <td>1.111111e+247</td>\n      <td>2.000000e+06</td>\n      <td>475.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 182
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "source": [
+    "The other steps of the CRISP-DM Process are done per question:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "source": [
     "## 1. Question: What are the differences between people who come from a STEM/ComSci background and those who did not?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Data preparation"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -351,6 +426,13 @@
    ]
   },
   {
+   "source": [
+    "We decided to make the Variables YearsCode, YearsCodePro and Age1stCode numerical. So far, someone was picking this age from a list and could choose less than xy/more than xy years. However, we would like to see the direct influence of age, so we think numerical has more power of expression. We must admit that this could have a negative impact, as e.g. more than 50 years could be anything greater than 50, while we just set it to 51."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
@@ -402,6 +484,13 @@
    ]
   },
   {
+   "source": [
+    "We create dummy variales for the categorical variables and fill missing numerical values with the mean of the other values in the column. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
@@ -426,6 +515,13 @@
     "    # for each cat add dummy var, drop original column\n",
     "    df_2 = pd.concat([df_2.drop(var, axis=1), pd.get_dummies(df_2[var], prefix=var, prefix_sep='_')], axis=1)\n"
    ]
+  },
+  {
+   "source": [
+    "Split data into rows with and without STEM background"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -645,7 +741,30 @@
   },
   {
    "source": [
+    "### Results evaluation\n",
+    "\n",
+    "It seems that people with a STEM major have on average more coding experience because they started earlier. Also, they are more often a developer by profession, while non-STEM majors are more likely than STEM majors to code as part of their job, but not primarily. Also, STEM majors are a bit more often full-time employed than non-STEM."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "## 2. Question: Which factors influence hourly wage? How to maximize it?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Data preparation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "We drop any rows that have missing values in either the ConvertedComp or WorkWeekHrs columns, as we want to calculate the hourly wage by them."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -750,6 +869,13 @@
    ]
   },
   {
+   "source": [
+    "We decided to make the Variables YearsCode, YearsCodePro and Age1stCode numerical. So far, someone was picking this age from a list and could choose less than xy/more than xy years. However, we would like to see the direct influence of age, so we think numerical has more power of expression. We must admit that this could have a negative impact, as e.g. more than 50 years could be anything greater than 50, while we just set it to 51."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 171,
    "metadata": {},
@@ -830,6 +956,13 @@
    ]
   },
   {
+   "source": [
+    "We create dummy variables and fill missing numerical columns with the mean."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 172,
    "metadata": {},
@@ -867,6 +1000,13 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=42)"
    ]
+  },
+  {
+   "source": [
+    "### Data modeling"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -963,7 +1103,25 @@
   },
   {
    "source": [
-    "## 3. Question: How does experience change the way coders handle problems?"
+    "### Results evaluation\n",
+    "\n",
+    "Most interestingly, whether you code as a hobby or not has no influence on your income. A bachelor or master seems to have a very positive impact on your earnings, more than a professional degree. Because for smaller organizatons, the influence on earnings is negative, we would think that bigger companies pay better. Freelancing really improves your hourlywage. \n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## 3. Question: How does experience change the way coders handle problems?\n",
+    "\n",
+    "### Data preparation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "We drop columns where the person either did not give an answer for YearsCode or NEWSTuck, because we want to 1st determine the experience of the user, and then determine how they solve problems"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1042,6 +1200,13 @@
    ]
   },
   {
+   "source": [
+    "At this point, we create dummy variables, but different than normal. When we would use the vanilla get_dummies function, we would get a different column for each combination of answers. However, here, we would like to get 1 or 0 for each of the possible answers, to then determine how much they have an influence on the predicted experience of a user, so we wrote the function ourselves."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 162,
    "metadata": {},
@@ -1117,6 +1282,13 @@
    ]
   },
   {
+   "source": [
+    "We make YearsCode numerical, to be able to actually predict the experience with a model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 166,
    "metadata": {},
@@ -1134,6 +1306,13 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=42)"
    ]
+  },
+  {
+   "source": [
+    "### Data modeling"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1193,6 +1372,15 @@
     "coefs_df = coefs_df.sort_values('abs_coefs', ascending=False)\n",
     "coefs_df.head(20)"
    ]
+  },
+  {
+   "source": [
+    "### Results evaluation\n",
+    "\n",
+    "Experienced developers seem to panic less, watch less tutorial videos and play less games when stuck, but rather go for a walk or do other work.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
